--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Exercice OpenClassRooms</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
 
     <body>
